5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4183/executions/1715_3064.log
== SUBMITION (2019-05-02 16:27:26) 
-- CODE:
cab = input("Cabeça: ")
d1 = int("Numero: ")
d2 = int("Numero: ")

if(0 > d1 or d1 > 10) or (0 > d2 or d2 > 10) or if not (cab == "AAMEUL") or not (cab == "HETHRADIAH") or not (cab == "RAKSHASA"):
	print("Entrada invalida")

if (cab == "AAMEUL"):
	print(8 + (d1 + d2))
elif (cab == "HETHRADIAH"):
	print((d1 + d2)*2)
else:
	print(10 + (d1 + d2))
-- EXECUTION TIME:
0.318544
-- ERROR:
  File "/home/codebench/codes/1715/3064/main.py", line 5
    if(0 > d1 or d1 > 10) or (0 > d2 or d2 > 10) or if not (cab == "AAMEUL") or not (cab == "HETHRADIAH") or not (cab == "RAKSHASA"):
                                                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:29:39) 
-- CODE:
cab = input("Cabeça: ")
d1 = int("Numero: ")
d2 = int("Numero: ")

if(0 < d1 or d1 < 10) amd (0 < d2 or d2 < 10):
	if (cab == "AAMEUL"):
		print(8 + (d1 + d2))
	elif (cab == "HETHRADIAH"):
		print((d1 + d2)*2)
	elif (cab == "RAKSHASA":
		print(10 + (d1 + d2))
			
else:
	print("Entrada invalida")
			
-- ERROR:
File "XXXX", line 5
    if(0 < d1 or d1 < 10) amd (0 < d2 or d2 < 10):
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:29:53) 
-- CODE:
cab = input("Cabeça: ")
d1 = int("Numero: ")
d2 = int("Numero: ")

if(0 < d1 or d1 < 10) and (0 < d2 or d2 < 10):
	if (cab == "AAMEUL"):
		print(8 + (d1 + d2))
	elif (cab == "HETHRADIAH"):
		print((d1 + d2)*2)
	elif (cab == "RAKSHASA":
		print(10 + (d1 + d2))
			
else:
	print("Entrada invalida")
			
-- ERROR:
File "XXXX", line 10
    elif (cab == "RAKSHASA":
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:29:59) 
-- CODE:
cab = input("Cabeça: ")
d1 = int("Numero: ")
d2 = int("Numero: ")

if(0 < d1 or d1 < 10) and (0 < d2 or d2 < 10):
	if (cab == "AAMEUL"):
		print(8 + (d1 + d2))
	elif (cab == "HETHRADIAH"):
		print((d1 + d2)*2)
	elif (cab == "RAKSHASA":)
		print(10 + (d1 + d2))
			
else:
	print("Entrada invalida")
			
-- ERROR:
File "XXXX", line 10
    elif (cab == "RAKSHASA":)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:30:13) 
-- CODE:
cab = input("Cabeça: ")
d1 = int("Numero: ")
d2 = int("Numero: ")

if(0 < d1 or d1 < 10) and (0 < d2 or d2 < 10):
	if (cab == "AAMEUL"):
		print(8 + (d1 + d2))
	elif (cab == "HETHRADIAH"):
		print((d1 + d2)*2)
	elif (cab == "RAKSHASA"):
		print(10 + (d1 + d2))
			
else:
	print("Entrada invalida")
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    d1 = int("Numero: ")
ValueError: invalid literal for int() with base 10: 'Numero: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:30:28) 
-- CODE:
cab = input("Cabeca: ")
d1 = int("Numero: ")
d2 = int("Numero: ")

if(0 < d1 or d1 < 10) and (0 < d2 or d2 < 10):
	if (cab == "AAMEUL"):
		print(8 + (d1 + d2))
	elif (cab == "HETHRADIAH"):
		print((d1 + d2)*2)
	elif (cab == "RAKSHASA"):
		print(10 + (d1 + d2))
			
else:
	print("Entrada invalida")
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    d1 = int("Numero: ")
ValueError: invalid literal for int() with base 10: 'Numero: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:31:02) 
-- CODE:
cab = input("Cabeca: ")
d1 = int(input("Numero: "))
d2 = int(input("Numero: "))

if(0 < d1 or d1 < 10) and (0 < d2 or d2 < 10):
	if (cab == "AAMEUL"):
		print(8 + (d1 + d2))
	elif (cab == "HETHRADIAH"):
		print((d1 + d2)*2)
	elif (cab == "RAKSHASA"):
		print(10 + (d1 + d2))
			
else:
	print("Entrada invalida")
			
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:31:16) 
-- CODE:
cab = input("Cabeca: ")
d1 = int(input("Numero: "))
d2 = int(input("Numero: "))

if(0 < d1 or d1 < 10) and (0 < d2 or d2 < 10):
	if (cab == "AAMEUL"):
		print(8 + (d1 + d2))
	elif (cab == "HETHRADIAH"):
		print((d1 + d2)*2)
	elif (cab == "RAKSHASA"):
		print(10 + (d1 + d2))
			
else:
	print("Entrada invalida")
			
-- EXECUTION TIME:
0.156569
-- TEST CASE 1:
---- input:
AAMEUL
23
1
---- correct output:
Entrada invalida
---- user output:
32
-- TEST CASE 2:
---- input:
RAKSHASA
1
2
---- correct output:
13
---- user output:
13
-- TEST CASE 3:
---- input:
AAMEUL
2
3
---- correct output:
13
---- user output:
13
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:31:20) 
-- CODE:
cab = input("Cabeca: ")
d1 = int(input("Numero: "))
d2 = int(input("Numero: "))

if(0 < d1 or d1 < 10) and (0 < d2 or d2 < 10):
	if (cab == "AAMEUL"):
		print(8 + (d1 + d2))
	elif (cab == "HETHRADIAH"):
		print((d1 + d2)*2)
	elif (cab == "RAKSHASA"):
		print(10 + (d1 + d2))
			
else:
	print("Entrada invalida")
			
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:32:31) 
-- CODE:
cab = input("Cabeca: ")
d1 = int(input("Numero: "))
d2 = int(input("Numero: "))

if(0 < d1 and d1 < 10) and (0 < d2 and d2 < 10):
	if (cab == "AAMEUL"):
		print(8 + (d1 + d2))
	elif (cab == "HETHRADIAH"):
		print((d1 + d2)*2)
	elif (cab == "RAKSHASA"):
		print(10 + (d1 + d2))
			
else:
	print("Entrada invalida")
			
-- EXECUTION TIME:
0.144926
-- TEST CASE 1:
---- input:
AAMEUL
23
1
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- TEST CASE 2:
---- input:
RAKSHASA
1
2
---- correct output:
13
---- user output:
13
-- TEST CASE 3:
---- input:
AAMEUL
2
3
---- correct output:
13
---- user output:
13
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
